# QuizCards

./: .gitignore  README.md  start_application.ps1
backend/: .env.example  main.py  pyproject.toml  requirements.txt  run.py  run_server.ps1
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  FileUpload.jsx  FlashcardsSection.jsx  KeyPointsSection.jsx  QuizModeSection.jsx  SummarySection.jsx  api.js  index.css  main.jsx
