[project]
name = "pdf-flashcards-backend"
version = "0.1.0"
description = "Backend for PDF text extraction, summarization, and flashcard generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.9.0",
    "python-dotenv>=1.0.0",
    "accelerate>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
